--- a/package.json
+++ b/package.json
@@ -1,31 +1,67 @@
 {
-  "name": "data-source-watch",
+  "name": "hermes",
   "version": "0.1.0",
-  "description": "Define data sources that will be perodicially fetched, and proccesed against GraphQL watch conditions",
+  "description": "Collects and receives data which is ingested to a processing pipeline which normalizes to prep for watch evaluations, watches trigger alerts",
   "main": "build/monoApp.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "build": "node_modules/typescript/bin/tsc --project ./",
-    "start": "node build/src/monoApp.js"
+    "start": "node build/src/monoApp.js",
+    "start:dev": "nodemon",
+    "start:services": "docker-compose -f docker-compose.yml up -d",
+    "stop:services": "docker-compose -f docker-compose.yml down",
+    "lint": "eslint --ext .ts src/",
+    "lint:fix": "eslint --ext .ts src/ --fix",
+    "kind:create": "kind create cluster --name hermes --config kind-config.yaml",
+    "kind:load": "kind load image-archive $npm_config_tag",
+    "kind:delete": "kind delete cluster --name hermes",
+    "k8s:createPullSecret": "kubectl --namespace $npm_config_helm_namespace create secret docker-registry ghcr-credentials  --docker-server=ghcr.io --docker-username=$npm_config_registry_username --docker-password=$npm_config_registry_password",
+    "k8s:createNamespace": "kubectl create namespace $npm_config_helm_namespace",
+    "helm:deploy": "helm --namespace $npm_config_helm_namespace upgrade --install hermes ./helm/hermes --debug --wait $npm_config_helm_args",
+    "helm:test": "helm test hermes",
+    "helm:delete": "helm delete hermes",
+    "helm:lint": "helm lint ./helm/hermes",
+    "test:e2e": "echo 'todo'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bryopsida/data-source-watch.git"
+    "url": "git+https://github.com/bryopsida/hermes.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bryopsida/data-source-watch/issues"
+    "url": "https://github.com/bryopsida/hermes/issues"
   },
-  "homepage": "https://github.com/bryopsida/data-source-watch#readme",
+  "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
+    "@bull-board/fastify": "^3.8.1",
+    "axios": "^0.24.0",
+    "bull": "^4.1.1",
+    "fastify-helmet": "^5.3.2",
+    "fastify": "^3.24.0",
+
     "knex": "^0.95.14",
+    "librdkafka": "^0.0.0",
+    "node-rdkafka": "^2.12.0",
     "pg": "^8.7.1",
-    "pino": "^7.4.1"
+    "pino": "^7.4.1",
+    "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.6",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
-    "fastify": "^3.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
