--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/bryopsida/data-source-watch#readme",
   "dependencies": {
+    "bull": "^4.1.1",
     "knex": "^0.95.14",
     "pg": "^8.7.1",
-    "pino": "^7.4.1"
+    "pino": "^7.4.1",
+    "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.6",
     "@types/node": "^16.11.10",
     "fastify": "^3.24.0",
     "ts-node": "^10.1.0",
