--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/typescript/bin/tsc --project ./",
     "start": "node build/src/monoApp.js",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "start:services": "docker-compose -f docker-compose.yml up -d",
+    "stop:services": "docker-compose -f docker-compose.yml down"
   },
   "repository": {
     "type": "git",
