--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node build/src/monoApp.js",
     "start:dev": "nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
-    "stop:services": "docker-compose -f docker-compose.yml down"
+    "stop:services": "docker-compose -f docker-compose.yml down",
+    "lint": "eslint --ext .ts src/",
+    "lint:fit": "eslint --ext .ts src/ --fix"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,9 @@
   "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
     "@bull-board/fastify": "^3.8.1",
+    "axios": "^0.24.0",
     "bull": "^4.1.1",
+    "fastify-helmet": "^5.3.2",
     "knex": "^0.95.14",
     "librdkafka": "^0.0.0",
     "node-rdkafka": "^2.12.0",
@@ -34,6 +38,13 @@
   "devDependencies": {
     "@types/bull": "^3.15.6",
     "@types/node": "^16.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "fastify": "^3.24.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.1.0",
