--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  build:
+  unit-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,3 +27,7 @@ jobs:
     - run: npm run lint --if-present
     - run: npm run build --if-present
     - run: npm test
+  build-container:
+    uses: bryopsida/hermes/.github/workflows/docker.yml@main
+  test-deploy:
+    uses: bryopsida/hermes/.github/workflows/helm.yml@main
