--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Collects and receives data which is ingested to a processing pipeline which normalizes to prep for watch evaluations, watches trigger alerts",
   "main": "build/monoApp.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "build": "node_modules/typescript/bin/tsc --project ./",
     "start": "node build/src/monoApp.js",
     "start:dev": "nodemon",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/bull": "^3.15.6",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -46,7 +47,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "fastify": "^3.24.0",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
