wip: only build contianer if unit tests pass

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
   build-container:
+    needs: [ unit-test ]
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
