--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-${{ matrix.node-version }}
         restore-keys: |
           ${{ runner.os }}-node-
+    - run: npm audit
     - run: npm ci
     - run: npm run lint --if-present
     - run: npm run build --if-present
