--- a/kind-config.yaml
+++ b/kind-config.yaml
@@ -5,4 +5,4 @@ containerdConfigPatches:
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:${reg_port}"]
     endpoint = ["http://${reg_name}:5000"]
 nodes:
-- role: control-plane,worker
+- role: control-plane
