--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
         sudo apt-get install -y wireguard
     - name: Create Wireguard Config
       run: |
-        cat <<EOF >> /etc/wireguard/wg0.conf
+        sudo cat <<EOF >> /etc/wireguard/wg0.conf
         [Interface]
         PrivateKey = ${{ secrets.WG_PRIVATE_KEY }}
         Address = ${{ secrets.WG_CLIENT_IP }}/32
