--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,13 +46,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Install cosign
         if: github.event_name != 'pull_request'
+        timeout-minutes: 4
         uses: sigstore/cosign-installer@1e95c1de343b5b0c23352d6417ee3e48d5bcd422
         with:
           cosign-release: 'v1.4.0'
       - name: Setup Docker buildx
+        timeout-minutes: 4
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
+        timeout-minutes: 5
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
           registry: ${{ env.REGISTRY }}
@@ -60,11 +63,13 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract Docker metadata
         id: meta
+        timeout-minutes: 5
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push Docker image
         id: build-and-push
+        timeout-minutes: 10
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
@@ -74,11 +79,13 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
+        timeout-minutes: 4
         env:
           COSIGN_EXPERIMENTAL: "true"
         run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
       - name: Export Container TAR
         if: ${{ github.event_name == 'pull_request' }}
+        timeout-minutes: 4
         run: |
           set -e
           set -x
@@ -87,6 +94,7 @@ jobs:
           gzip -c /tmp/artifacts/image.tar > /tmp/artifacts/image.tar.gz
       - name: Upload Container TAR
         if: ${{ github.event_name == 'pull_request' }}
+        timeout-minutes: 4
         uses: actions/upload-artifact@v2
         with:
           path: /tmp/artifacts/image.tar.gz
@@ -101,11 +109,13 @@ jobs:
       uses: actions/checkout@v2
     - name: Download Container TAR
       if: ${{ github.event_name == 'pull_request' }}
+      timeout-minutes: 4
       uses: actions/download-artifact@v1
       with:
         path: /tmp/artifacts/
         name: image.tar.gz
     - name: Import Container TAR
+      timeout-minutes: 4
       if: ${{ github.event_name == 'pull_request' }}
       run: |
         set -e
@@ -114,12 +124,16 @@ jobs:
         gzip --stdout --decompress /tmp/artifacts/image.tar.gz > /tmp/artifacts/image.tar
         docker load -i /tmp/artifacts/image.tar
     - name: Create KIND Cluster
+      timeout-minutes: 10
       run: npm run kind:create
     - name: Deploy
+      timeout-minutes: 5
       run: npm run helm:deploy
     - name: Test Deployment
+      timeout-minutes: 5
       run: npm run helm:test
     - name: E2E Tests
+      timeout-minutes: 10
       run: npm run test:e2e
   deploy:
     needs: [ test-deploy ]
@@ -148,9 +162,11 @@ jobs:
         EOF
         sudo cp ./wg0.conf /etc/wireguard/wg0.conf
     - name: Connect To Wireguard
+      timeout-minutes: 5
       run: |
         wg-quick up wg0
     - name: Check Wireguard Connection
+      timeout-minutes: 5
       run: |
         ping -c 1 -W 1 ${{ secrets.WG_TEST_IP}}
     # unpack kubeconfig
