--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,8 +165,52 @@ jobs:
     - name: E2E Tests
       timeout-minutes: 10
       run: npm run test:e2e
+  helm-lint:
+    name: Lint Helm Chart
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Lint Helm Chart
+        run: npm run helm:lint
+  kube-scan:
+    name: Kubesec
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create single template for scanning
+        working-directory: helm/hermes
+        run: |
+          helm template . > infra.yaml
+      - name: actions/upload-artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: infra-template-render
+          path: helm/hermes/infra.yaml
+      - name: Run kubesec scanner
+        uses: controlplaneio/kubesec-action@43d0ddff5ffee89a6bb9f29b64cd865411137b14
+        with:
+          input: helm/hermes/infra.yaml # specify configuration file to scan here
+          format: template
+          template: /templates/sarif.tpl
+          output: kubesec-results.sarif
+          exit-code: "0"
+      - name: actions/upload-artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: kubesec-analysis
+          path: kubesec-results.sarif
+      - name: Upload Kubesec scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: kubesec-results.sarif
   deploy:
-    needs: [ test-deploy ]
+    needs: [ test-deploy, kube-scan ]
     runs-on: ubuntu-latest
     environment: lab
     concurrency: 
