--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helm:deploy": "helm upgrade --install --set image.tag=latest hermes ./helm/hermes --debug --wait",
     "helm:test": "helm test hermes",
     "helm:delete": "helm delete hermes",
+    "helm:lint": "helm lint ./helm/hermes",
     "test:e2e": "echo 'todo'"
   },
   "repository": {
