--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,8 +87,7 @@ jobs:
         uses: anchore/scan-action@v3
         with:
           image: ${{ steps.meta.outputs.tags }}
-          fail-build: true
-          severity-cutoff: high
+          fail-build: false
           acs-report-enable: true
       - name: Upload Anchore scan SARIF report
         uses: github/codeql-action/upload-sarif@v1
