--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ env:
   KUBE_NAMESPACE: hermes
 jobs:
   unit-test:
+    name: "Unit Test"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,6 +36,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
   build-container:
+    name: "Build Container"
     needs: [ unit-test ]
     runs-on: ubuntu-latest
     outputs:
@@ -131,6 +133,7 @@ jobs:
           retention-days: 1
           if-no-files-found: error
   test-deploy:
+    name: "Test Deploy"
     needs: [ build-container ]
     runs-on: ubuntu-latest
     steps:
@@ -173,8 +176,9 @@ jobs:
       - name: Lint Helm Chart
         run: npm run helm:lint
   kube-scan:
-    name: Kubesec
+    name: Kubernetes Security Scan
     runs-on: ubuntu-latest
+    continue-on-error: true
     permissions:
       actions: read
       contents: read
