--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,7 @@ jobs:
           fail-build: false
           acs-report-enable: true
       - name: Upload Anchore scan SARIF report
+        if: ${{ env.CODEQL_ENABLED }}
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
@@ -132,9 +133,17 @@ jobs:
           name: image.tar.gz
           retention-days: 1
           if-no-files-found: error
+  helm-lint:
+    name: Lint Helm Chart
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Lint Helm Chart
+        run: npm run helm:lint
   test-deploy:
     name: "Test Deploy"
-    needs: [ build-container ]
+    needs: [ build-container, helm-lint ]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -167,18 +176,9 @@ jobs:
     - name: E2E Tests
       timeout-minutes: 10
       run: npm run test:e2e
-  helm-lint:
-    name: Lint Helm Chart
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Lint Helm Chart
-        run: npm run helm:lint
   kube-scan:
     name: Kubernetes Security Scan
     runs-on: ubuntu-latest
-    continue-on-error: true
     permissions:
       actions: read
       contents: read
@@ -209,6 +209,7 @@ jobs:
           name: kubesec-analysis
           path: kubesec-results.sarif
       - name: Upload Kubesec scan results to GitHub Security tab
+        if: ${{ env.CODEQL_ENABLED }}
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: kubesec-results.sarif
