--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,9 @@ jobs:
       - name: Anti Virus Scan
         timeout-minutes: 10
         run: |
-          sudo apt-get install clamav
+          sudo apt-get install clamav clamav-daemon -y
+          sudo systemctl stop clamav-freshclam
+          sudo freshclam
           clamscan /tmp/artifacts/image.tar.gz
       - name: Push image
         if: github.event_name != 'pull_request'
