--- a/.github/workflows/wg.yml
+++ b/.github/workflows/wg.yml
@@ -35,6 +35,7 @@ jobs:
           sudo systemctl start wg-quick@wg0.service
           sudo wg show
           sudo route -n
+          sudo ip route get ${{ secrets.TEST_IP}}
       - name: Check Wireguard Connection
         timeout-minutes: 5
         run: |
