--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-mono
   CLUSTER_NAME: lab
-  KUBERNETES_SERVICE_HOST: kubernetes.default.svc.cluster.local
   KUBE_NAMESPACE: hermes
 jobs:
   build-container:
@@ -206,13 +205,15 @@ jobs:
     - name: Install Wireguard
       run: |
         sudo apt-get update
-        sudo apt-get install -y wireguard resolvconf
+        sudo apt-get install -y wireguard-dkms
     - name: Create Wireguard Config
       run: |
         cat <<EOF >> ./wg0.conf
         [Interface]
         PrivateKey = ${{ secrets.WG_PRIVATE_KEY }}
         Address = ${{ secrets.WG_CLIENT_IP }}/32
+        PostUp = ${{ secrets.WG_POST_UP }}
+        PostDown = ${{ secrets.WG_POST_DOWN }}
 
         [Peer]
         PublicKey = ${{ secrets.WG_AP_PUBLIC_KEY }}
@@ -224,17 +225,17 @@ jobs:
     - name: Connect To Wireguard
       timeout-minutes: 5
       run: |
-        sudo wg-quick up wg0 || exit 1
+        sudo systemctl enable wg-quick@wg0.service
+        sudo systemctl start wg-quick@wg0.service
     - name: Check Wireguard Connection
       timeout-minutes: 5
       run: |
-        ip addr
         ping -c 1 -W 1 ${{ secrets.WG_TEST_IP}}
         ping -c 1 -W 1 ${{ secrets.TEST_IP}}
     - name: Create KUBECONFIG
       timeout-minutes: 2
       run: |
-        kubectl config set-cluster ${{ env.CLUSTER_NAME }} --server=${{ env.KUBERNETES_SERVICE_HOST }} --insecure-skip-tls-verify=true
+        kubectl config set-cluster ${{ env.CLUSTER_NAME }} --server=${{ secrets.TEST_IP }} --insecure-skip-tls-verify=true
         kubectl config set-credentials ${{ env.CLUSTER_NAME }} --token=${{ secrets.KUBERNETES_TOKEN }}
         kubectl config set-context ${{ env.CLUSTER_NAME }} --cluster=${{ env.CLUSTER_NAME }} --user=${{ env.CLUSTER_NAME }}
         kubectl config use-context ${{ env.CLUSTER_NAME }}
@@ -248,6 +249,6 @@ jobs:
       timeout-minutes: 4
       if: always()
       run: |
-        sudo wg-quick down wg0
+        sudo systemctl stop wg-quick@wg0.service
         sudo shred -u /etc/wireguard/wg0.conf
         shred -u ./wg0.conf
