--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,11 @@
 name: Hermes Pipeline
 on: 
-  workflow_dispatch:
+  push: 
+    branches: 
+      - main
+  pull_request: 
+    branches: 
+      - main
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-mono
