--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,7 +240,7 @@ jobs:
     - name: Create Kubernetes Configuration
       timeout-minutes: 2
       run: |
-        mkdir -p ~/.kube/config
+        mkdir -p ~/.kube
         cat <<EOF >> ~/.kube/config
         apiVersion: v1
         clusters:
